Disk caches of multiple particle systems on a single object sometimes overwrite each other #35328

Closed
opened 2013-05-12 17:43:15 +02:00 by Yu Asakusa · 6 comments

%%%--- Operating System, Graphics card ---
Windows 7 64-bit Service Pack 1, Mobile Intel 4 Series Express Chipset

- Blender version with error, and version that worked ---

Error: Blender 2.67 64-bit (official)
Working: none I know of

- Short description of error ---

If two particle systems are added to a single object and both use disk cache, they sometimes behave incorrectly, apparently because both particle systems use the same cache file name.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Either open the attached .blend file or follow the following steps 1a–1h:
    1a. Load the factory settings.
    1b. Save .blend file to an empty directory.
    1c. Add a particle system to the default Cube, and change its name to Downward.
    1d. Change the settings of Downward as follows: in section Emission, change Start to 25; in section Cache, change Cache Step to 1 and check Disk Cache.
    1e. Make a duplicate of Cube (Shift+D), named Cube.001 by default.
    1f. Delete the original Cube.
    1g. Add another particle system to Cube.001, and change its name to Upward.
    1h. Change the settings of Upward as follows: in section Cache, change Cache Step to 1 and check Disk Cache; in Field Weights, change Gravity to -1. Note that the emission time of Upward is from frame 1 to frame 200 (the default settings).
  2. Start animation. After frame 25, particle system Upward of Cube.001 stops working.
  3. (optional) If you select Upward and start animation, you can see that the particles of Upward use the locations of the particles of Downward after frame 25.

Remarks:

A workaround is to give different cache file names to two particle systems. Note that if we use this workaround with the attached example, the point cache files for the two particle systems have the same suffix _00. If I am not mistaken, this means that both particle systems think that they are attached to the first Particle System modifier, which I believe should not happen.
%%%

%%%--- Operating System, Graphics card --- Windows 7 64-bit Service Pack 1, Mobile Intel 4 Series Express Chipset - Blender version with error, and version that worked --- Error: Blender 2.67 64-bit (official) Working: none I know of - Short description of error --- If two particle systems are added to a single object and both use disk cache, they sometimes behave incorrectly, apparently because both particle systems use the same cache file name. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Either open the attached .blend file or follow the following steps 1a–1h: 1a. Load the factory settings. 1b. Save .blend file to an empty directory. 1c. Add a particle system to the default Cube, and change its name to Downward. 1d. Change the settings of Downward as follows: in section Emission, change Start to 25; in section Cache, change Cache Step to 1 and check Disk Cache. 1e. Make a duplicate of Cube (Shift+D), named Cube.001 by default. 1f. Delete the original Cube. 1g. Add another particle system to Cube.001, and change its name to Upward. 1h. Change the settings of Upward as follows: in section Cache, change Cache Step to 1 and check Disk Cache; in Field Weights, change Gravity to -1. Note that the emission time of Upward is from frame 1 to frame 200 (the default settings). 2. Start animation. After frame 25, particle system Upward of Cube.001 stops working. 3. (optional) If you select Upward and start animation, you can see that the particles of Upward use the locations of the particles of Downward after frame 25. Remarks: A workaround is to give different cache file names to two particle systems. Note that if we use this workaround with the attached example, the point cache files for the two particle systems have the same suffix _00. If I am not mistaken, this means that both particle systems think that they are attached to the first Particle System modifier, which I believe should not happen. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin self-assigned this 2014-02-03 15:27:05 +01:00

Will try to look into this issue. Perhaps it's not so difficult :)

Will try to look into this issue. Perhaps it's not so difficult :)

This issue was referenced by blender/blender-addons-contrib@aa3d88d34d

This issue was referenced by blender/blender-addons-contrib@aa3d88d34d3b3a352073e6449b092b6e23033127

This issue was referenced by aa3d88d34d

This issue was referenced by aa3d88d34d3b3a352073e6449b092b6e23033127

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit aa3d88d34d.

Closed by commit aa3d88d34d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35328
No description provided.