source/blender/blenloader/intern/writefile.c
@@ -1542,6 +1542,7 @@ static void write_objects(WriteData *wd, ListBase *idbase)
 			write_particlesystems(wd, &ob->particlesystem);
 			write_modifiers(wd, &ob->modifiers);
 
+			writelist(wd, DATA, "LinkData", &ob->pc_ids);
 			writelist(wd, DATA, "LodLevel", &ob->lodlevels);
 		}
 		ob= ob->id.next;
